Se crearon los html y javas para las funcionalides del registro de usuarios
Se creo Usuario en la capa de Entidad, Se creo UsuarioDao En la capa de persistencia, en la capa de vista se crearon; ActualizarUsuarioServelt,EliminarUsuarioServelt,ObtenerUsuariosServlet y RegistroUsarioServlet